Use require_serial to fix #1

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -4,3 +4,4 @@
   description: Prevent accidentally adding unencrypted files with git-crypt
   entry: check-git-crypt-status
   language: python
+  require_serial: true
